Remove extra line spacing for code now that we fixed the font
It was leaving gaps between line backgrounds when marked, and the descender
problem this adjustment was designed to address doesn't occur with Source Sans.

--- a/css/_adobe-reveal-theme-base.scss
+++ b/css/_adobe-reveal-theme-base.scss
@@ -128,7 +128,6 @@ $mainFontWeight: 300;
       margin: auto;
       width: auto;
       height: auto;
-      line-height: 1.4em;
 
       code {
         max-height: 100%;
